--- a/index.html
+++ b/index.html
@@ -1,13 +1,38 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>La page « Hello World »</title>
+    <title>Site de Guillaume Marcel</title>
     <link rel="icon" type="image/png" href="assets/images/faviconLPWDS.ico"/>
     <link rel="stylesheet" href="assets/styles/reset.css">
     <link rel="stylesheet" href="assets/styles/main.css">
+    <meta charset="UTF-8">
     <script src="assets/js/script.js"></script>
 </head>
 <body>
-<p>Hello world!</p>
+<body>
+    <header>
+        <img src="" alt="logo">
+        <ul id="menu">
+            <li>A propos</li>
+            <li>Parcours</li>
+            <li>Contacts</li>
+        </ul>
+    </header>
+    <main>
+        <section id="acceuil">
+            <h1>Guillaume Marcel</h1>
+            <p>Webdesigner</p>
+        </section>
+        
+        <section id="a-propos">
+           <p></p>
+  
+        </section>
+
+    </main>
+    <footer>
+        Guillaume Marcel | 2019
+    </footer>
+</body>
 </body>
 </html>
